# opengl-cmake

./: .gitmodules  CMakeLists.txt  README.md
cmake/: GLFW.cmake  Warnings.cmake
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: main.cpp
